2011-07-04  Per Bothner  <bothner@kuling.bothner.com>

	* MethodProc.java (isApplicable): Add special hack for
	Type.toStringType.

2011-06-29  Per Bothner  <bothner@kuling.bothner.com>

	* MethodProc.java (mostSpecific): Fix thinko.  (Not 100% sure this
	is right, but at least is doesn't crash now.)

2011-06-23  Per Bothner  <bothner@kuling.bothner.com>

	* Lazy.java (force): Rename to getValue;
	* Future.java (force): Likewise
	* Promise.java (force): Likewise.
	(static force): Update to use getValue method interface Lazy.

2011-06-14  Per Bothner  <per@bothner.com>

	* Lazy.java: New interface.
	* Makefile.am: Update accordingly.
	* Promise.java: Implement Lazy.
	(force): Change to use Lazy.  Force repeatedly.
	* Future.java: Implement Lazy.
	* RunnableClosure.java: Make generic.

2011-06-14  Per Bothner  <per@bothner.com>

	* Promise.java: Moved here from kawa.lang.

2011-04-25  Charles Turner  <chturne@gmail.com>
	    Per Bothner  <per@bothner.com>

	* WrongType.java (getMessage): Retrieve types from the
	currently default language.

2011-04-14  Per Bothner  <per@bothner.com>

	* InheritingEnvironment.java (namespaceMap, propertyMap): Remove
	fields - which are never actually set or used.
	(lookupInherited): Skip unused namespaceMap/propertyMap translation.

2010-11-27  Per Bothner  <per@bothner.com>

	* OutPort.java (finalizeAction): New field.
	* CharArrayOutPort.java (finalize): New empty method.
	(close, closeThis): Null out some fields.
	(finalize): Check finalizeAction and maybe flush or close.

2010-11-26  Per Bothner  <per@bothner.com>

	* Symbol.java (<init>(Namespace,String)): Swap argument order.
	Change from public to protected, to fix overloading resolution
	problems from Scheme 'symbol' constructor function.
	(makeUninterned): Publicly-visible alternative.
	* SimpleSymbol.java: Update accordingly.
	* Namespace.java: Likewise.

2010-10-21  Per Bothner  <per@bothner.com>

	* CallContext.java (getArgCount): New method.
